[package]
name = "mkt-coverage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
imageproc = "0.22"
itertools = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
regex = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false