[package]
name = "mkt-item_coverage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
itertools = "0.10.1"
reqwest = { version = "0.11.4", features = ["blocking"] }
scraper = "0.12.0"
regex = "1.5.4"
lazy_static = "1.4.0"
hashlink = "0.7.0"
img_hash = "3.2.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "my_benchmark"
harness = false