[package]
name = "mkt-data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.10.1"
regex = "1.5.4"
lazy_static = "1.4.0"
serde = "1.0.129"
serde_json = "1.0.66"
hashlink = { version = "0.7.0", features = ["serde_impl"] }
chrono = { version = "0.4.19", features = ["serde"] }
