[package]
name = "mkt-data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.11.0"
regex = "1.9.6"
lazy_static = "1.4.0"
serde = "1.0.188"
serde_json = "1.0.107"
hashlink = { version = "0.8.4", features = ["serde_impl"] }
chrono = { version = "0.4.31", features = ["serde", "wasmbind"] }
unidecode = "0.3.0"
