[package]
name = "mkt-import"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mkt-data = { path = "../mkt-data" }
# this disables rayon in the jpeg decoder, otherwise it breaks in WASM
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.22.0"
itertools = "0.10.1"
img_hash = "3.2.0"

[dev-dependencies]
pretty_assertions = "1.0.0"