[package]
name = "mkt-import"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mkt-data = { path = "../mkt-data" }
# this disables rayon in the jpeg decoder, otherwise it breaks in WASM
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.23.0"
itertools = "0.11.0"
image_hasher = "1.2.0"
palette = "0.7.3"
base64 = "0.21.4"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.4.0"