[package]
name = "mkt-inventory-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mkt-data = { path = "../mkt-data" }
mkt-import = { path = "../mkt-import" }
yew = "0.19.3"
yew-agent = "0.1.0"
gloo = "0.5.0"
gloo-utils = "0.1"
reqwest = "0.11.4"
js-sys = "0.3"
web-sys = { version = "0.3.54", features = ["History"] }
wasm-bindgen = "0.2.77"
itertools = "0.10.1"
serde = "1.0.130"
serde_json = "1.0.66"
chrono = "0.4.19"