[package]
name = "mkt-inventory-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mkt-data = { path = "../mkt-data" }
mkt-import = { path = "../mkt-import" }
yew = "0.19.3"
yew-agent = "0.1.0"
gloo = "0.10.0"
gloo-utils = "0.2.0"
reqwest = "0.11.20"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["History"] }
wasm-bindgen = "0.2.87"
itertools = "0.11.0"
serde = "1.0.188"
serde_json = "1.0.107"
chrono = "0.4.31"