[package]
name = "mkt-update"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mkt-data = { path = "../mkt-data" }
itertools = "0.10.1"
reqwest = { version = "0.11.4", features = ["blocking", "cookies", "gzip", "brotli", "deflate"] }
scraper = "0.12.0"
regex = "1.5.4"
csv = "1.1.6"
unidecode = "0.3.0"
lazy_static = "1.4.0"