[package]
name = "mkt-update"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mkt-data = { path = "../mkt-data" }
itertools = "0.11.0"
reqwest = { version = "0.11.20", features = ["blocking", "cookies", "gzip", "brotli", "deflate"] }
scraper = "0.17.1"
regex = "1.9.6"
csv = "1.2.2"
unidecode = "0.3.0"
lazy_static = "1.4.0"